feat initial tests
